fix: filters and tags work corrected